feat/potjes visualisaties tussenversie (1)
