# src/main/kotlin/io/vliet/plusmin/controller/ReserveringController.kt
@@ -20,17 +20,6 @@ class ReserveringController {
 
     val logger: Logger = LoggerFactory.getLogger(this.javaClass.name)
 
-    @PutMapping("/administratie/{administratieId}/periode/{periodeId}")
-    fun creeerReserveringVoorPeriode(
-        @PathVariable("administratieId") administratieId: Long,
-        @PathVariable("periodeId") periodeId: Long,
-    ): ResponseEntity<Any> {
-        val (administratie, gebruiker) = gebruikerService.checkAccess(administratieId)
-        logger.info("POST ReserveringController.creeerNieuweReserveringVoorPeriode voor ${administratie.naam} door ${gebruiker.bijnaam}/${gebruiker.subject}")
-        reserveringService.creeerReserveringenVoorPeriode(administratie, periodeId)
-        return ResponseEntity.ok().build()
-    }
-
     @PutMapping("/administratie/{administratieId}")
     fun creeerReservering(
         @PathVariable("administratieId") administratieId: Long,
